# CrackAddict

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/: main.c  main.h  md5.c  md5.h  stringGen.c  stringGen.h  workerThread.c  workerThread.h
src/Dictionary/: FileParsing.c  FileParsing.h  md5Dict.txt
src/OptionsHandling/: OptionsHandling.c  OptionsHandling.h
src/StringGeneration/: stringGen.c  stringGen.h
src/Utility/: getCpuInfo.c  getCpuInfo.h
src/WorkerThread/: workerThread.c  workerThread.h
src/md5/: breakMd5Hash.c  breakMd5Hash.h  md5.c
tests/: RunTests.sh
tests/md5/: md5.check
tests/stringGen/: stringGen.check
